--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Dr. De Liu"
 title_separator          : "-"
 name                     : &name "Dr. De Liu"
 description              : &description "Associate Professor of Information and Decision Sciences at University of Minnesota"
-url                      : "https://de4liu.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://de4liu.github.io/home" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "home"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
