--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Dr. De Liu"
 title_separator          : "-"
 name                     : &name "Dr. De Liu"
 description              : &description "Associate Professor of Information and Decision Sciences at University of Minnesota"
-url                      : "https://de4liu.github.io/home" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://de4liu.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/home" # the subpath of your site, e.g. "/blog"
 repository               : "home"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
