--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. De Liu"
   avatar           : "de_liu.jpg"
-  bio              : "De Liu is an Associate professor of Information and Decision Sciences and 3M Fellow in Business Analytics at the Carlson School of Management, University of Minnesota. His research interests include mechanism design issues in digital auctions, gamification, crowdsourcing, crowdfunding, and social commerce. He currently serves as an associate editor for Information Systems Research and Journal of Organizational Computing and Electronic Commerce and the academic director for MS in Business Analytics (MSBA) program at the Carlson School."
+  bio              : "Associate Professor of Information and Decision Sciences, University of Minnesota"
   location         : "Minneapolis, MN"
   employer         :
   pubmed           : 
