--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  SSRN             : "http://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=421639"
 
 
 # Reading Files
