--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dr. De Liu"
 title_separator          : "-"
 name                     : &name "Dr. De Liu"
-description              : &description "Associate Professor, Information and Decision Sciences, University of Minnesota"
+description              : &description "Xian Dong Eric Jing Professor, Information and Decision Sciences, University of Minnesota"
 url                      : "https://de4liu.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/home" # the subpath of your site, e.g. "/blog"
 repository               : "de4liu/home"
