--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. De Liu"
   avatar           : "de_liu.jpg"
-  bio              : ""Xian Dong Eric Jing Professor, Information and Decision Sciences, University of Minnesota"
+  bio              : "Xian Dong Eric Jing Professor, Information and Decision Sciences, University of Minnesota"
   location         : "Minneapolis, MN"
   employer         :
   pubmed           : 
